Remove lorem ipsum text and fix spelling error

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -20,7 +20,7 @@
     .eight.columns
       %h2 About Us
       %p Cincinnati Ruby Brigade was formed by local developers who desired a place to talk about Ruby specific topics and share code. It has since grown into a thriving community as vibrant and creative as the Ruby language itself.
-      %p Today we meet on the third tuesday of every month to discuss and hack on Ruby code and strieve to keep to the principle of less slides more code.
+      %p Today we meet on the third tuesday of every month to discuss and hack on Ruby code and strive to keep to the principle of less slides more code.
       #tweet
         %a{:href => ""} Follow Us
         %h4 Recent Tweet
@@ -55,7 +55,7 @@
 %section#contact
   .container.row
     %h2 Contact Us
-    %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu quam et arcu venenatis dignissim nec id turpis. Proin non sapien elit.
+    %p Have a topic idea? Want to present at a Cinci.rb meeting? Have a suggestion? Send us a comment here.
     %form.container.row
       #left-contact.five.columns
         %input{:placeholder => "​Name", :type => "​text"}
