--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -56,16 +56,17 @@
   .container.row
     %h2 Contact Us
     %p Have a topic idea? Want to present at a Cinci.rb meeting? Have a suggestion? Send us a comment here.
-    %form.container.row
+    %p.flash.flash_notice
+    = form_tag("/contact_us", :method => :post, :class => "container row", :remote => true, :id => "contact-form") do
       #left-contact.five.columns
-        %input{:placeholder => "​Name", :type => "​text"}
+        %input{:name =>"name", :placeholder => "​Name", :type => "​text"}
         ​
-        %input{:placeholder => "​Email Address", :type => "​text"}
+        %input{:name => "email", :placeholder => "​Email Address", :type => "​text"}
         ​
-        %input{:placeholder => "​Subject", :type => "​\"text"}
+        %input{:name => "subject", :placeholder => "​Subject", :type => "​\"text"}
         ​
       #left-contact.seven.columns
-        %textarea{:id => "​standardTexted", :placeholder => "​Message"}
+        %textarea{:name => "message", :placeholder => "​Message"}
         ​
       #submit
         %input{:type => "submit", :value => "Submit"}/
