--- a/app/views/contact_mailer/contact_email.text.haml
+++ b/app/views/contact_mailer/contact_email.text.haml
@@ -1,6 +1,6 @@
 Feedback from cincyrb.com:
 ===========================
-From: #{@name}
-Subject: #{@topic}
+From: #{@contact.name} (#{@contact.email})
+Subject: #{@contact.subject}
 Message:
-#{@comment}
+#{@contact.message}
