better yet video should be on top that is what people want to see

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -413,9 +413,12 @@ input:-moz-placeholder, textarea:-moz-placeholder
 
 .speaker-bio
 
-.speaker img
+.speaker-headshot
   height: 128px
   width: 128px
+
+.speaker img
+  width: 100%
 /* -----------------------------------------
  *   Footer Styles
  *-----------------------------------------
