Some minor twitter fixes. Getting tweet to show up and birdie linking correctly

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -22,7 +22,7 @@
       %p Cincinnati Ruby Brigade was formed by local developers who desired a place to talk about Ruby specific topics and share code. It has since grown into a thriving community as vibrant and creative as the Ruby language itself.
       %p Today we meet on the third tuesday of every month to discuss and hack on Ruby code and strive to keep to the principle of less slides more code.
       #tweet
-        %a{:href => ""} Follow Us
+        %a{:href => "https://twitter.com/cincinnatirb"} Follow Us
         %h4 Recent Tweet
         %p
           = image_tag 'spinner.gif'
