Bye, bye, Edgecase. Now new Neo.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -331,12 +331,12 @@ input:-moz-placeholder, textarea:-moz-placeholder
         text-decoration: underline
 
 #edgecase .logo
-  background: image-url('main.png') -40px -226px no-repeat
+  background: image-url('neo-logo.png') no-repeat
   display: block
-  height: 52px
+  height: 66px
   margin: 77px auto 25px
   text-indent: -9999px
-  width: 189px
+  width: 204px
 
 #engine-yard .logo
   background: image-url('main.png') -345px -146px no-repeat
