--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -54,9 +54,10 @@
         %a.become-a-sponsor{:href => "mailto:info@gaslightsoftware.com"} + become a sponsor
         .sponsors.container.row
           %article#edgecase.four.columns
-            %a.logo{:href => "http://www.edgecase.com", :target => "_blank"} EdgeCase
-            %p We are a team of talented software artisans who love solving problems. Our dedicated group of developers and artists have individual expertise in areas such as usability, security, enterprise application integration, and business analysis. Passionate about software development, we are driven by the challenge of what we do.
-            %a{:href => "http://www.edgecase.com", :target => "_blank"} www.edgecase.com
+            %a.logo{:href => "http://www.neo.com", :target => "_blank"} Neo
+            %p Neo is a global product innovation company. We turn vision into reality, delivering exceptional software with robust engineering, lean thinking and delightful design.
+            %p We design and build mobile and Web products, create corporation innovation programs, and transform internal talent by pairing and teaching.
+            %a{:href => "http://www.neo.com", :target => "_blank"} www.neo.com
           %article#engine-yard.four.columns
             %a.logo{:href => "http://www.engineyard.com", :target => "_blank"} Engine Yard
             %p Engine Yard is the leading Platform as a Service (PaaS), empowering software application innovation more rapidly, easily and cost effectively.
