order the past events by when they occur not when created

--- a/app/views/past_events/_past_events.html.haml
+++ b/app/views/past_events/_past_events.html.haml
@@ -1,5 +1,5 @@
 %section#past-events
-  - @events.reverse.each do |event|
+  - @events.each do |event|
     %section#video
       .containerVideo
         .row
