update sponsorship information for gaslight

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -330,7 +330,7 @@ input:-moz-placeholder, textarea:-moz-placeholder
       &:hover
         text-decoration: underline
 
-#edgecase .logo
+#neo .logo
   background: image-url('neo-logo.png') no-repeat
   display: block
   height: 66px
@@ -347,12 +347,14 @@ input:-moz-placeholder, textarea:-moz-placeholder
   width: 73px
 
 #gaslight .logo
-  background: image-url('main.png') -40px -314px no-repeat
+  background: image-url('gaslight-logo.png') no-repeat
+  background-size: 100%
   display: block
-  height: 55px
-  margin: 75px auto 25px
+  height: 75px
+  margin: 77px auto 25px
   text-indent: -9999px
-  width: 230px
+  width: 254px
+  z-index: 99
 
 .become-a-sponsor
   background: #58554a
