--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,7 +38,7 @@
             %li
               %a.scroll{:href => "#sponsors"} Sponsors
             %li
-              =link_to("Past Events", past_events_path)  
+              =link_to("Past Events", past_events_path)
         %ul#social
           %li.twitter
             %a{:href => "https://twitter.com/#!/cincinnatirb", :target => "_blank"} Follow us on Twitter!
@@ -53,7 +53,7 @@
         %h2 Sponsors
         %a.become-a-sponsor{:href => "mailto:info@gaslightsoftware.com"} + become a sponsor
         .sponsors.container.row
-          %article#edgecase.four.columns
+          %article#neo.four.columns
             %a.logo{:href => "http://www.neo.com", :target => "_blank"} Neo
             %p Neo is a global product innovation company. We turn vision into reality, delivering exceptional software with robust engineering, lean thinking and delightful design.
             %p We design and build mobile and Web products, create corporation innovation programs, and transform internal talent by pairing and teaching.
@@ -63,9 +63,10 @@
             %p Engine Yard is the leading Platform as a Service (PaaS), empowering software application innovation more rapidly, easily and cost effectively.
             %a{:href => "http://www.engineyard.com", :target => "_blank"} www.engineyard.com
           %article#gaslight.four.columns
-            %a.logo{:href => "http://www.gaslightsoftware.com", :target => "_blank"} Gaslight Software
-            %p We are leading agile practitioners delivering value-driven software. We've honed our craft through practical application. We've grown with the industry. We have a history of multiple languages, environments and a mastery of the best technologies.
-            %a{:href => "http://www.gaslightsoftware.com", :target => "_blank"} www.gaslightsoftware.com
+            %a.logo{:href => "http://www.gaslight.co", :target => "_blank"} Gaslight
+            %p A design and development shop passionate about building your best ideas.
+            %p We partner with you to create custom software, web apps and mobile apps.
+            %a{:href => "http://www.gaslight.co", :target => "_blank"} www.gaslight.co
     %footer
       .container.row
         %h5
