Its just gaslight now

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -71,7 +71,7 @@
       .container.row
         %h5
           Designed and built by
-          %a{:href => "http://www.gaslightsoftware.com", :target => "_blank"} Gaslight Software
+          %a{:href => "http://www.gaslight.co", :target => "_blank"} Gaslight
           in 2012
         %a#top.scroll{:href => "#home"} Take me to the top!
     / Included JS Files
