--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -37,7 +37,7 @@
                 = format_date_for_homepage(meeting["time"]).html_safe
             %p
               = meeting["name"]
-            %a{:href => "http://goo.gl/BwcH2", :target => "_blank"} @ Gaslight Studios
+            %a{:href => "http://goo.gl/BwcH2", :target => "_blank"} @ Gaslight
   / end .row
 %section#contact
   .container.row
