use different gaslight logo

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -177,6 +177,7 @@ nav
       &#location
         margin-bottom: 5px
 
+
 /* -----------------------------------------
  *   About/Events Styles
  *-----------------------------------------
@@ -316,6 +317,7 @@ input:-moz-placeholder, textarea:-moz-placeholder
   article
     background: image-url('dark-overlay-bg.jpg')
     min-height: 300px
+    padding-bottom: 15px
     text-align: center
     p
       font-size: .9em
@@ -350,10 +352,10 @@ input:-moz-placeholder, textarea:-moz-placeholder
   background: image-url('gaslight-logo.png') no-repeat
   background-size: 100%
   display: block
-  height: 75px
-  margin: 77px auto 25px
+  height: 150px
+  margin: 25px auto 25px
   text-indent: -9999px
-  width: 254px
+  width: 154px
   z-index: 99
 
 .become-a-sponsor
