--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -53,20 +53,19 @@
         %h2 Sponsors
         %a.become-a-sponsor{:href => "mailto:info@gaslightsoftware.com"} + become a sponsor
         .sponsors.container.row
+          %article#gaslight.four.columns
+            %a.logo{:href => "http://www.gaslight.co", :target => "_blank"} Gaslight
+            %p A design and development shop passionate about building your best ideas. We partner with you to create custom software, web apps and mobile apps.
+            %a{:href => "http://www.gaslight.co", :target => "_blank"} www.gaslight.co
+          %article#engine-yard.four.columns
+            %a.logo{:href => "http://www.engineyard.com", :target => "_blank"} Engine Yard
+            %p Engine Yard is the leading Platform as a Service (PaaS), empowering software application innovation more rapidly, easily and cost effectively.
+            %a{:href => "http://www.engineyard.com", :target => "_blank"} www.engineyard.com
           %article#neo.four.columns
             %a.logo{:href => "http://www.neo.com", :target => "_blank"} Neo
             %p Neo is a global product innovation company. We turn vision into reality, delivering exceptional software with robust engineering, lean thinking and delightful design.
             %p We design and build mobile and Web products, create corporation innovation programs, and transform internal talent by pairing and teaching.
             %a{:href => "http://www.neo.com", :target => "_blank"} www.neo.com
-          %article#engine-yard.four.columns
-            %a.logo{:href => "http://www.engineyard.com", :target => "_blank"} Engine Yard
-            %p Engine Yard is the leading Platform as a Service (PaaS), empowering software application innovation more rapidly, easily and cost effectively.
-            %a{:href => "http://www.engineyard.com", :target => "_blank"} www.engineyard.com
-          %article#gaslight.four.columns
-            %a.logo{:href => "http://www.gaslight.co", :target => "_blank"} Gaslight
-            %p A design and development shop passionate about building your best ideas.
-            %p We partner with you to create custom software, web apps and mobile apps.
-            %a{:href => "http://www.gaslight.co", :target => "_blank"} www.gaslight.co
     %footer
       .container.row
         %h5
