Gaslight is no longer in Blue Ash

--- a/app/views/past_events/index.html.haml
+++ b/app/views/past_events/index.html.haml
@@ -6,7 +6,7 @@
       %p
         %strong Cincinnati Ruby Brigade
         is a group of local developers who talk about Ruby specific topics and share code.
-      %a{:href => "http://goo.gl/BwcH2", :target => "_blank"} Write code with us!
+      = link_to_location_map 'Write code with us!', :target => '_blank'
     #next.four.columns
       %section
         %article#next-meeting
