--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -6,7 +6,7 @@
       %p
         %strong Cincinnati Ruby Brigade
         is a group of local developers who talk about Ruby specific topics and share code.
-      %a{:href => "http://goo.gl/BwcH2", :target => "_blank", :id => "rsvp"} Write code with us!
+      = link_to_location_map 'Write code with us!', :target => '_blank', :id => 'rsvp'
     #next.four.columns
       %section
         %article#next-meeting
@@ -37,7 +37,7 @@
                 = format_date_for_homepage(meeting["time"]).html_safe
             %p
               = meeting["name"]
-            %a{:href => "http://goo.gl/BwcH2", :target => "_blank"} @ Gaslight
+            = link_to_location_map '@ Gaslight', :target => '_blank'
   / end .row
 %section#contact
   .container.row
