Replace Twitter integration with embedded timeline

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -28,13 +28,12 @@
     <div class='eight columns'>
       <h2>About Us</h2>
       <p>Cincinnati Ruby Brigade was formed by local developers who desired a place to talk about Ruby specific topics and share code. It has since grown into a thriving community as vibrant and creative as the Ruby language itself.</p>
-      <p>Today we meet on the third tuesday of every month to discuss and hack on Ruby code and strive to keep to the principle of less slides more code.</p>
+      <p>Today we meet on the third Thursday of every month to discuss and hack on Ruby code and strive to keep to the principle of less slides more code.</p>
       <div id='tweet'>
         <a href='https://twitter.com/cincinnatirb'>Follow Us</a>
-        <h4>Recent Tweet</h4>
         <p>
-          <%= image_tag 'spinner.gif' %>
-          Loading...
+          <a class="twitter-timeline" href="https://twitter.com/cincinnatirb?ref_src=twsrc%5Etfw">Tweets by @cincinnatirb</a>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </p>
       </div>
     </div>
@@ -42,15 +41,15 @@
       <h3>Upcoming Events</h3>
       <section>
         <%- @upcoming_meetings.each do |meeting| %>
-          <article>
-            <div class="date">
-              <h1><%= format_date_for_homepage(meeting["time"]).html_safe %></h1>
-            </div>
-            <p>
-              <%= meeting["name"] %>
-              <%= link_to_location_map '@ Gaslight', :target => '_blank' %>
-            </p>
-          </article>
+        <article>
+          <div class="date">
+            <h1><%= format_date_for_homepage(meeting["time"]).html_safe %></h1>
+          </div>
+          <p>
+            <%= meeting["name"] %>
+            <%= link_to_location_map '@ Gaslight', :target => '_blank' %>
+          </p>
+        </article>
         <%- end %>
       </section>
     </div>
@@ -63,19 +62,19 @@
     <p>Have a topic idea? Want to present at a Cinci.rb meeting? Have a suggestion? Send us a comment here.</p>
     <p class='flash flash_notice'></p>
     <%= form_for Contact.new, html: { id: "contact-form", class: "container row" }, url: "/contact_us", :remote => true do |f| %>
-      <div>
-        <div class="left-contact five columns">
-          <%= f.text_field :name, :placeholder => "Name" %>
-          <%= f.text_field :email, :placeholder => "Email Address" %>
-          <%= f.text_field :subject, :placeholder => "Subject" %>
-        </div>
-        <div class="left-contact seven columns">
-          <%= f.text_area :message, :placeholder => "Message", :rows => 5 %>
-        </div>
-        <div class="submit">
-          <input type="submit" value="Submit">
-        </div>
+    <div>
+      <div class="left-contact five columns">
+        <%= f.text_field :name, :placeholder => "Name" %>
+        <%= f.text_field :email, :placeholder => "Email Address" %>
+        <%= f.text_field :subject, :placeholder => "Subject" %>
       </div>
+      <div class="left-contact seven columns">
+        <%= f.text_area :message, :placeholder => "Message", :rows => 5 %>
+      </div>
+      <div class="submit">
+        <input type="submit" value="Submit">
+      </div>
+    </div>
     <%- end %>
   </div>
 </section>
