--- a/app/views/past_events/index.html.erb
+++ b/app/views/past_events/index.html.erb
@@ -2,7 +2,7 @@
   <div class='container row'>
     <div class='eight columns'>
       <h1>Cincy.rb - Cincinnati Ruby Brigade</h1>
-      <%= image_tag('logo.png', alt: 'Cincy.rb logo', id: 'logo') %>
+      <%= image_tag('cincyrb-icon', alt: 'Cincy.rb logo', id: 'logo') %>
       <p>
         <strong>Cincinnati Ruby Brigade</strong>
         is a group of local developers who talk about Ruby specific topics and share code.
