--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,9 @@
+<%= link_to("Past Events", past_events_path) %>
+<ul id='social'>
+  <li class='twitter'><a href='https://twitter.com/#!/cincinnatirb' target='_blank'>Follow us on Twitter!</a></li>
+  <li class='facebook'><a href='http://www.facebook.com/events/162252363797871/' target='_blank'>Be Our Friend on Facebook!</a></li>
+  <li>share</li>
+</ul>
 <section id='home'>
   <div class='container row'>
     <div class='eight columns'>
