--- a/app/assets/stylesheets/base/typography.scss
+++ b/app/assets/stylesheets/base/typography.scss
@@ -1,11 +1,21 @@
-/* -----------------------------------------
- *   Fonts
- *-----------------------------------------*/
+// Zilla Slab & Lato
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-@font-face {
-  font-family: 'BebasNeueRegular';
-  src: url('../assets/BebasNeue-webfont.eot');
-  src: url('../assets/BebasNeue-webfont.eot?#iefix') format("embedded-opentype"), url('../assets/BebasNeue-webfont.woff') format("woff"), url('../assets/BebasNeue-webfont.ttf') format("truetype"), url('../assets/BebasNeue-webfont.svg#BebasNeueRegular') format("svg");
-  font-weight: normal;
-  font-style: normal;
+body {
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Zilla Slab', serif;
+}
+
+h1 {
+  font-size: 4rem;
+  font-weight: 300;
 }
