--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,27 +1,22 @@
 <%= link_to("Past Events", past_events_path) %>
 <ul id='social'>
-  <li class='twitter'><a href='https://twitter.com/#!/cincinnatirb' target='_blank'>Follow us on Twitter!</a></li>
-  <li class='facebook'><a href='http://www.facebook.com/events/162252363797871/' target='_blank'>Be Our Friend on Facebook!</a></li>
+  <li><a href='https://twitter.com/#!/cincinnatirb' target='_blank'>Follow us on Twitter!</a></li>
+  <li><a href='http://www.facebook.com/events/162252363797871/' target='_blank'>Be Our Friend on Facebook!</a></li>
   <li>share</li>
 </ul>
 <section id='home'>
-  <div class='container row'>
-    <div class='eight columns'>
-      <h1>Cincy.rb - Cincinnati Ruby Brigade</h1>
-      <%= image_tag('cincyrb-icon.png', alt: 'Cincy.rb logo', id: 'logo') %>
-      <p>
-        <strong>Cincinnati Ruby Brigade</strong>
-        is a group of local developers who talk about Ruby specific topics and share code.
-      </p>
-      <%= link_to_location_map('Write code with us!', :target => '_blank', :id => 'rsvp') %>
-    </div>
-    <%= render 'next_meeting' %>
-  </div>
-  <!-- end #container -->
+  <%= image_tag('cincyrb-icon.png', alt: 'Cincy.rb logo', id: 'logo') %>
+  <h1>Cincy.rb - Cincinnati Ruby Brigade</h1>
+  <p>
+    <strong>Cincinnati Ruby Brigade</strong>
+    is a group of local developers who talk about Ruby specific topics and share code.
+  </p>
+  <%= link_to_location_map('Write code with us!', :target => '_blank', :id => 'rsvp') %>
+  <%= render 'next_meeting' %>
 </section>
 <section id='about'>
-  <div class='container row'>
-    <div class='eight columns'>
+  <div>
+    <div>
       <h2>About Us</h2>
       <p>Cincinnati Ruby Brigade was formed by local developers who desired a place to talk about Ruby specific topics and share code. It has since grown into a thriving community as vibrant and creative as the Ruby language itself.</p>
       <p>Today we meet on the third Thursday of every month to discuss and hack on Ruby code and strive to keep to the principle of less slides more code.</p>
@@ -33,12 +28,12 @@
         </p>
       </div>
     </div>
-    <div class='four columns' id='events'>
+    <div id='events'>
       <h3>Upcoming Events</h3>
       <section>
         <%- @upcoming_meetings.each do |meeting| %>
         <article>
-          <div class="date">
+          <div>
             <h1><%= format_date_for_homepage(meeting["time"]).html_safe %></h1>
           </div>
           <p>
@@ -53,21 +48,21 @@
   <!-- end .row -->
 </section>
 <section id='contact'>
-  <div class='container row'>
+  <div>
     <h2>Contact Us</h2>
     <p>Have a topic idea? Want to present at a Cinci.rb meeting? Have a suggestion? Send us a comment here.</p>
     <p class='flash flash_notice'></p>
-    <%= form_for Contact.new, html: { id: "contact-form", class: "container row" }, url: "/contact_us", :remote => true do |f| %>
+    <%= form_for Contact.new, html: { id: "contact-form" }, url: "/contact_us", :remote => true do |f| %>
     <div>
-      <div class="left-contact five columns">
+      <div>
         <%= f.text_field :name, :placeholder => "Name" %>
         <%= f.text_field :email, :placeholder => "Email Address" %>
         <%= f.text_field :subject, :placeholder => "Subject" %>
       </div>
-      <div class="left-contact seven columns">
+      <div>
         <%= f.text_area :message, :placeholder => "Message", :rows => 5 %>
       </div>
-      <div class="submit">
+      <div>
         <input type="submit" value="Submit">
       </div>
     </div>
