--- a/app/assets/stylesheets/base/typography.scss
+++ b/app/assets/stylesheets/base/typography.scss
@@ -4,6 +4,7 @@
 body {
   font-family: 'Lato', sans-serif;
   font-size: 16px;
+  line-height: 1.5;
 }
 
 h1,
@@ -13,6 +14,7 @@ h4,
 h5,
 h6 {
   font-family: 'Zilla Slab', serif;
+  margin: 0 0 $space-sm;
 }
 
 h1 {
