WIP design header

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,8 @@
 
 // Components
 @import
+"components/header",
+"components/logo",
 "components/speaker",
 "components/sponsorship",
 "components/video";
